namespace SideScroller.Helpers.Managers
{
    static class UnitAnimationParametersManager
    {
        #region Fields

        public const string HURT = "Hurt";
        public const string JUMP = "Jump";
        public const string DEATH = "Death";
        public const string ATTACK = "Attack";
        public const string RECOVER = "Recover";
        public const string MOVING_SPEED = "MovingSpeed";

        public const string IS_MOVING = "IsMoving";
        public const string IS_GROUNDED = "IsGrounded";
        public const string IS_WEAPON_OUT = "IsWeaponOut";

        #endregion
    }
}